изменены типы данных в формировании маппинга. поправила кавычки в фильтрах

--- a/Mapping-master/config.yml
+++ b/Mapping-master/config.yml
@@ -1,7 +1,7 @@
 'database': 'pmnt'
 'developer': 'Kachan Olga'
 'docs': '-'
-'file_dir': 'C:\Users\okachan\Documents\втб\файлы\dag\1416 - pmnt - Платёжные сервисы\new_json'
+'file_dir': 'C:/Users/okachan/Documents/втб/файлы/dag/1387 - trns - Переводы ФЛ/gen'
 'id_ris': '1416'
 'loadType': 'Scd0AppendPartition'
 'mapping_version': '1.0'
